--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,63 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.button{
+  position: relative;
+  width: 100%;
+  height: 33px;
+  margin: 0.5rem 0 0;
+  padding: 0;
+  background-color: #8d9aa6;
+  border: none;
+  border-radius: 0.3125rem;
+  color: white;
+  font-size: 0.75rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  transition: 0.25s;
+  overflow: hidden;
+}
+
+.button:before {
+  content: 'Calculate';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.button.loading:before, form .button.loading:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.button.loading:before {
+  content: 'LOADING';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: whitesmoke;
+  font-size: 0.75rem;
+  font-weight: bold;
+  z-index: 1;
+}
+.button.loading:after {
+  content: '';
+  width: 0%;
+  height: 100%;
+  background-color: #2ecc71;
+  animation: loading 2s ease;
+  z-index: 0;
+}
+@keyframes loading {
+  100% {
+    width: 100%;
+  }
+}
+.button:hover {
+  background-color: slategray;
+  box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+}
