--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,21 @@ form .button:hover {
   background-color: slategray;
   box-shadow: 0 0 0 rgba(0, 0, 0, 0);
 }
+
+body {
+
+  height: 102vh;
+  width: 100vw;
+  background-image: url("final.png");
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  /*background-position: bottom 5px right 7px;*/
+  background-size: 1350px;
+  margin:0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+
+}
+
+/** { margin:0; padding:0; box-sizing:border-box; }*/
