--- a/src/components/css/ResultBox.css
+++ b/src/components/css/ResultBox.css
@@ -23,3 +23,9 @@
 .notification .subtitle.is-4 {
     font-size: 1.5rem; /* Adjust this value to your desired font size */
 }
+
+.notification {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2), 0 6px 6px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+}
+
